--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <source src="hole.mp4.mp4">
         </video>
        <i> <h2 align="center">Live a life you will remember like  </h2></i> <br>
-        <h3>Amante de la programacion y el diseño de Software, los conocimientos adquiridos son gracias al tiempo aprovechado en los momentos libres, donde el internet es una gran fuente de conocimientos...</h3>
+        <p>Amante de la programacion y el diseño de Software, los conocimientos adquiridos son gracias al tiempo aprovechado en los momentos libres, donde el internet es una gran fuente de conocimientos...</p>
 
                     <p>Nombres y apellidos : Gabriel Misael Medranda García</p>  
                     <p>Edad: 18 años</p>
@@ -120,7 +120,7 @@
                     <p> Virtual DJ</p>
                     <br>    
                 </div>
-                <h3>Puedo describirme como una persona que le gusta ser sociable, me gusta practicar la filantropía, creo en un Dios a pesar de que no poseo una religion en si, suelo ser muy cauteloso en la administracion de mi tiempo, sin embargo en ocasiones se llegar tarde a clases por cuestiones de transporte, me gustan los videojuegos casuales, creo en que los seres humanos somos capaces de lograr cualquier cosa, solo que se debe de buscar la manera de como conseguirlas. </h3> <br> <br>
+                <p>Puedo describirme como una persona que le gusta ser sociable, me gusta practicar la filantropía, creo en un Dios a pesar de que no poseo una religion en si, suelo ser muy cauteloso en la administracion de mi tiempo, sin embargo en ocasiones se llegar tarde a clases por cuestiones de transporte, me gustan los videojuegos casuales, creo en que los seres humanos somos capaces de lograr cualquier cosa, solo que se debe de buscar la manera de como conseguirlas. </p> <br> <br>
           <h4>Atencion: Este sitio web aun esta en desarrollo, para poder desarrollar una pagina web personal a mi gusto, requiero al menos de dos semanas para poder implementar .css y hacerla responsive de una manera eficiente, sin embargo he aplicado css en pequeñas partes</h4>
 
           <h4>Pagina web personal version alpha a0.1.12</h4>
