--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </li>
      </ul>
     </li>
-    <li><a href="build.html">Acerca de</a>
+    <li><a href="">Acerca de</a>
      <ul>
       <li><a href="build.html">¿Quien soy ?</a></li>
        <li><a href="build.html">Formacion Academica</a></li>
